fix contrast

--- a/app/globals.css
+++ b/app/globals.css
@@ -130,7 +130,6 @@ hr {
 #subPage-section {
   font-size: 1rem;
   text-align: center;
-  color: grey;
 }
 
 .subPage-copy p {
